--- a/css/master.css
+++ b/css/master.css
@@ -2473,3 +2473,14 @@ body {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+
+
+    .circle-container {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      overflow: hidden;
+      background-color: white;
+    }
+    
